# server/src/domain/command/CreateTodoCommand.js
@@ -1,22 +1,18 @@
-import { v4 as uuid } from 'uuid';
 import Todo from '../entity/Todo.js';
 import db from '../../infrastructure/db/index.js';
+import { v4 as uuidv4 } from 'uuid';
 
 class CreateTodoCommand {
   static async execute({ task }) {
     if (task.length > 40) {
-      throw new Error('Task cannot be longer than 40 characters.');
+      throw new Error('Task must not be longer than 40 characters.');
     }
 
+    const id = uuidv4();
     const now = new Date().toISOString();
-    const todo = new Todo({
-      todoID: uuid(),
-      task,
-      createdAt: now,
-      updatedAt: now,
-    });
 
-    await db.insert('Todo', todo.toJSON());
+    const todo = new Todo({ id, task, createdAt: now, updatedAt: now });
+    await db.insert('todos', todo.toJSON());
     return todo.toJSON();
   }
 }
